[weavedb] minimum viable dev_weavedb_nif in Rust

--- a/rebar.config
+++ b/rebar.config
@@ -33,8 +33,10 @@
 ]}.
 
 {cargo_opts, [
+    {src_dir, "native/dev_weavedb_nif"},
     {src_dir, "native/dev_snp_nif"}
 ]}.
+
 
 {overrides, []}.
 
